edited for mobile view

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </section>
       <!--Section 2-->
       <section class="section-two-title">
-        <div class="container">
+        <div class="container hw7-section-two">
           <h2 class="visually-hidden">Hidden Title</h2>
           <ul class="list section-two-list">
             <li class="card-info">
@@ -731,10 +731,10 @@
           </form>
         </div>
       </div>
-    <script src="./modal.js"></script>
+    <script src="./modal/modal.js"></script>
 
     <!-- Mobile Menu JS -->
-    <script defer src="js/mobile-menu.js"></script>
+    <script defer src="./modal/mobile-menu.js"></script>
     
     <!-- Scroll Lock -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
